toxxi/tests/snapshots/widgets_message_list_test__message_list_custom_width.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
[12:00] ● Alice | Message with narrow sender col            
────────────────────────────────────────────────────────────
