toxxi/tests/snapshots/widgets_message_list_test__message_list_grapheme_boundary.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
──────────
          
          
12:00 Alic
123456789↳
🤝🏾        
──────────
