toxxi/tests/snapshots/widgets_message_list_test__message_list_grouping_narrow.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
──────────────────────────────
                              
                              
                              
                              
                              
                              
                              
12:00 Alice ●                 
First message                 
Second message (grouped)      
──────────────────────────────
