toxxi/tests/snapshots/widgets_message_list_test__message_list_long_nickname.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
[12:00] ● SuperLongNi… | Testing layout with long name      
────────────────────────────────────────────────────────────
