toxxi/tests/snapshots/widgets_message_list_test__message_list_rich.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
[12:00] ● Alice | ╭─ 📥 vacation.jpg [2.0 MB]─────────────────────────────────╮ 
                | │ ██████████████████░░░░░░░░░░░░░░░░░  50% (1.2 MB/s) ETA:  │ 
                | ╰───────────────────────────────────────────────────────────╯ 
[12:01] ●   Bob | ╭─ 🎮 Chess Challenge───────────────────────────────────────╮ 
                | │ Bob wants to play!                                        │ 
                | ╰─ [ (j) Join Game ] [ (n) No thanks ] ─────────────────────╯ 
────────────────────────────────────────────────────────────────────────────────
