toxxi/tests/snapshots/widgets_message_list_test__message_list_unicode_wrap_stress.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/message_list_test.rs
expression: rendered
---
──────────────────────────────
                              
                              
                              
                              
                              
                              
                              
                              
                              
                              
12:00 Alice ●                 
Long Unicode Stress Test: 你 ↳
好! 🦀🤝🏾🦀🤝🏾🦀🤝🏾🦀🤝🏾🦀🤝🏾🦀🤝🏾 ↳
🦀🤝🏾🦀🤝🏾 and wrapping        ↳
continues here.               
──────────────────────────────
